deployment/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elb-ingress
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - http:
      paths:
      - path: /qrcode
        pathType: Prefix
        backend:
          service:
            name: qrcode-service
            port:
              number: 80
      - path: /blockchain
        pathType: Prefix
        backend:
          service:
            name: blockchain-service
            port:
              number: 80
      - path: /twitter
        pathType: Prefix
        backend:
          service:
            name: twitter-service
            port:
              number: 80
